syntax = "proto3";
package fetcher;

option go_package = "github.com/2n1k1ch2/gold/cmd/Agent/fetcher;snapshot";
message SnapShot {
  string ServiceName =1;
  int64 timestamp=2;
  bytes GoroutineDump=3;
  bytes BlockProfile=4;
  bytes MutexProfile=5;
  map<string, double> runtime_metrics = 6;
  string version=7;
}